# expert-palm-tree

./: .gitignore  Dockerfile.db  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
init-scripts/: 01-init.sql
src/embedding/: main.py
src/expert_palm_tree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/feed_service/: main.py
src/ingestion/: main.py
src/migrations/: env.py
src/migrations/versions/: 445cd5e810b3_create_user_keyword_index.py  44ffbe238e1f_create_posts_hypertable.py  51209ea5380d_create_feed_date_index.py  9604122f044f_create_embeddings_table.py  adec8d3a23a1_add_posts_unique_commit_constraint.py  e0c4b5b68ea7_create_feeds_table.py  initial_schema.py
src/shared/: config.py  database.py  types.py
