[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expert-palm-tree"
version = "0.1.0"
description = "Synthesizes custom feeds for BlueSky based on keywords or other search terms"
requires-python = ">=3.11"
readme="README.md"
dependencies = [
    "alembic>=1.14.0",
    "bcrypt>=4.2.1",
    "fastapi>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.5",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "websockets>=14.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "shared",  # Common utilities and shared code
    "feed_service",  # Feed generation service
    "ingestion",  # Data ingestion service
    "migrations",  # Database migrations
]

[tool.setuptools.package-data]
"*" = ["py.typed"]
